[package]
name = "reva_derive"
version = "0.13.2"
description = "Procedural macro package for Reva"
homepage = "https://github.com/trisuaso/reva"
repository = "https://github.com/trisuaso/reva"
license = "MIT/Apache-2.0"
workspace = ".."
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[lib]
proc-macro = true

[features]
config = []
humansize = []
urlencode = []
num-traits = []
with-actix-web = []
with-axum = []
with-rocket = []
with-warp = []

[dependencies]
parser = { package = "reva_parser", version = "0.3.1", path = "../reva_parser" }
mime = "0.3"
mime_guess = "2"
proc-macro2 = "1"
quote = "1"
syn = "2"
basic-toml = { version = "0.1.9" }
serde = { version = "1.0.217", features = ["derive"] }
