[package]
name = "reva_escape"
version = "0.11.0"
description = "Optimized HTML escaping code, extracted from Reva"
documentation = "https://docs.rs/reva_escape"
keywords = ["html", "escaping"]
homepage = "https://github.com/trisuaso/reva"
repository = "https://github.com/trisuaso/reva"
license = "MIT OR Apache-2.0"
workspace = ".."
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
criterion = "0.5"
